align the footer with padding correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,5 +113,5 @@ footer div a{
 }
 
 i{
-    padding: 1em;
+    padding: 5px;
 }
